tests/rosetta/out/OCaml/abbreviations-easy.error
ocamlc: exit status 2
File "/tmp/abbreviations-easy.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Abbreviations-easy" is not a valid module name.
File "/tmp/abbreviations-easy.ml", line 178, characters 0-0:
Error: Syntax error
